[gd_scene load_steps=12 format=3 uid="uid://b4ilhsosxmwum"]

[ext_resource type="Script" uid="uid://cuacabyiaxqdr" path="res://scenes/main_v2.gd" id="1_main_script_v2"]
[ext_resource type="PackedScene" uid="uid://b7j8lam3n4p5q" path="res://scenes/environment/procedural_slope.tscn" id="1_procedural_slope"]
[ext_resource type="PackedScene" uid="uid://c6xj3q8pxr7kv" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" path="res://scenes/ui/difficulty_selector.tscn" id="3_difficulty_selector"]
[ext_resource type="Script" uid="uid://h6abmo04w0o8" path="res://scripts/camera/free_camera.gd" id="4_free_camera"]
[ext_resource type="Script" uid="uid://bb5gwfvikxmqg" path="res://scripts/ui/minimap.gd" id="5_minimap"]
[ext_resource type="Script" uid="uid://by0ffl8q2xtoe" path="res://scripts/ui/density_controls.gd" id="6_density_controls"]
[ext_resource type="Script" uid="uid://brih7bde2cbp6" path="res://scripts/ui/trick_score_display.gd" id="7_trick_score"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
ambient_light_color = Color(0.8, 0.8, 0.85, 1)
ambient_light_energy = 0.6
tonemap_mode = 2
glow_enabled = true

[node name="MainV2" type="Node3D"]
script = ExtResource("1_main_script_v2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 50, 50)
light_color = Color(1, 0.98, 0.95, 1)
light_energy = 1.8
shadow_enabled = true
shadow_bias = 0.08
shadow_normal_bias = 1.2
directional_shadow_mode = 1
directional_shadow_blend_splits = true
directional_shadow_fade_start = 0.75
directional_shadow_max_distance = 3000.0

[node name="ProceduralSlope" parent="." instance=ExtResource("1_procedural_slope")]

[node name="Player" parent="." instance=ExtResource("2_player")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 350.2, 0)

[node name="FreeCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 100, 100)
script = ExtResource("4_free_camera")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DifficultySelector" parent="UI" instance=ExtResource("3_difficulty_selector")]
offset_top = -239.0

[node name="Minimap" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("5_minimap")

[node name="DensityControls" type="VBoxContainer" parent="UI"]
script = ExtResource("6_density_controls")

[node name="TrickScoreDisplay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("7_trick_score")

[node name="TrickNameLabel" type="Label" parent="UI/TrickScoreDisplay"]
layout_mode = 0
offset_left = 860.0
offset_top = 150.0
offset_right = 1060.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 32
text = "Backflip"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RotationLabel" type="Label" parent="UI/TrickScoreDisplay"]
layout_mode = 0
offset_left = 860.0
offset_top = 200.0
offset_right = 1060.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 48
text = "360Â°"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePopupLabel" type="Label" parent="UI/TrickScoreDisplay"]
layout_mode = 0
offset_left = 760.0
offset_top = 400.0
offset_right = 1160.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 42
text = "Backflip
+100 pts!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalScoreLabel" type="Label" parent="UI/TrickScoreDisplay"]
layout_mode = 0
offset_left = 1700.0
offset_top = 30.0
offset_right = 1880.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 28
text = "Score: 0"
horizontal_alignment = 2
vertical_alignment = 1
